--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,9 @@
     <title>Project JavaScript</title>
 </head>
 <body>
-    
+    <header>
+        
+    </header>
     <script src="main.js"></script>
 </body>
 </html>
