--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse fs-4" id="navbarNav">
                     <ul class="navbar-nav ms-md-auto">
                         <li class="nav-item">
-                            <a class="nav-link" id="pestaña-activa" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item pan">
-                            <a class="nav-link" href="tienda.html">Tienda</a>
+                            <a class="nav-link" href="#.html">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
+                            <a class="nav-link" href="#.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -46,6 +46,7 @@
     </header>
 
     <script src="main.js"></script>
+    <!-- <script src="desafios.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script></body>
 
 </body>
