--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
             </div>
         </nav>
     </header>
+    <div id="contenedor">
 
-    <script src="main.js"></script>
-    <!-- <script src="desafios.js"></script> -->
+    </div>
+    <div id="carrito">
+
+    </div>
+    <!-- <script src="main.js"></script> -->
+    <script src="desafios.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script></body>
 
 </body>
