--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <div class="collapse navbar-collapse fs-4" id="navbarNav">
                     <ul class="navbar-nav ms-md-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" id="pestaña-activa" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item pan">
+                        <li class="nav-item">
                             <a class="nav-link" href="tienda.html">Tienda</a>
                         </li>
                     </ul>
