--- a/tienda.html
+++ b/tienda.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Project JavaScript</title>
     <title>Tienda |Tienda de Computacion</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-md mi_nav bg-info">
@@ -29,16 +33,10 @@
                 <div class="collapse navbar-collapse fs-4" id="navbarNav">
                     <ul class="navbar-nav ms-md-auto">
                         <li class="nav-item">
-                            <a class="nav-link" id="pestaña-activa" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#.html">Sobre Nosotros</a>
+                            <a class="nav-link"href="index.html">Home</a>
                         </li>
                         <li class="nav-item pan">
-                            <a class="nav-link" href="tienda.html">Tienda</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
+                            <a class="nav-link" id="pestaña-activa" href="tienda.html">Tienda</a>
                         </li>
                     </ul>
                 </div>
@@ -46,7 +44,13 @@
         </nav>
     </header>
 
-<script src="main.js"></script>
+    <div id="contenedor" class="mt-4 ms-5 me-5">
+
+    </div>
+
+    <div id="carrito"></div>
+
+<script src="tienda.js"></script>
 
 </body>
 </html>
