--- a/tienda.html
+++ b/tienda.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md mi_nav bg-info">
+        <nav class="navbar navbar-expand-md mi_nav bg-info" id="header">
             <div class="container-fluid">
                 <!-- Nombre de la empresa -->
                 <a class="navbar-brand" href="index.html"> 
@@ -48,7 +48,9 @@
 
     </div>
 
-    <div id="carrito"></div>
+    <div id="carrito">
+
+    </div>
 
 <script src="tienda.js"></script>
 
