--- a/tienda.html
+++ b/tienda.html
@@ -35,7 +35,7 @@
                         <li class="nav-item">
                             <a class="nav-link"href="index.html">Home</a>
                         </li>
-                        <li class="nav-item pan">
+                        <li class="nav-item">
                             <a class="nav-link" id="pestaña-activa" href="tienda.html">Tienda</a>
                         </li>
                     </ul>
